  Mimic count is no longer updated either.

30/07/2007
- Telepaths dont share hp anymore, it was:
  1) silyl given the idea of only the spirit of the telepath moving
  2) cheezy
- Telepaths only share half their mana
- Player levels now goes up to 100
- Monster can ain levels up to 500

02/08/2001
- Randarts rarer
- Randart power reduced
- Max 2 EA on randarts
- Max +7 mana on randarts
- Tidal Wave mana/level increased
- Healing in hellish mode is now only 3/4 instead of 1/2
- Player Golems! One can find pieces of golem and make a powerfull ally
- Level requirement for objects, exepct for the char that found it
- Level requirments on objects
- One can inscribe an object #of the Fool to get the object to display:
  "The Dager of the Fool"
- Races get different mana
- race restrict class
- Mana penality for armor increased
- Increased speed effect at high levels

04/08/2001
- New houses ready for testing prior to potential server reset
- Extended dungeon. After level 100(5000') it loops to pseudo level 1
  but with all monsters gaining +100 level
- No lev restriction on parties, but only opeople in the +/-7 level range will
  gain xp

05/08/2001
- Finished Archers books
- 90 day player timeout added.

05/08/2001 - PernMangband 3.2.0

10/08/2001
- Golems works
- Fixed Fury warrior technic

11/08/2001 - evileye
- New polygonal houses work ok now. Checks for moving off depth
  work. Player disconnect is handled ok.
  Optimisation for houses which are rectangular is needed before
  inclusion into the game properly.
  Scroll limits need to be discussed and set accordingly.

11/08/2001 - evileye
- Rectangular optimisation of houses complete.
- House creation is now compatible with the dynamic houses array.

13/08/2001 - evileye
- Added courtyards - houses with no floor (inscribe FIRST scroll @F)
- Houses were not killed on player suicide. Fixed
- Made start on a delete_house function (For DM)
- Houses may now be created within larger houses.