@@ -1130,7 +1130,7 @@ I:45:18:0
 W:50:0:2:3000
 A:50/1
 P:0:0d0:0:0:15
-F:RES_FIRE | IGNORE_FIRE
+F:REDUC_FIRE | IGNORE_FIRE
 
 N:147:Acid
 G:=:d
@@ -1138,7 +1138,7 @@ I:45:17:0
 W:50:0:2:3000
 A:50/1
 P:0:0d0:0:0:15
-F:RES_ACID | IGNORE_ACID
+F:REDUC_ACID | IGNORE_ACID
 
 N:148:Ice
 G:=:d
@@ -1146,7 +1146,7 @@ I:45:19:0
 W:50:0:2:3000
 A:50/1
 P:0:0d0:0:0:15
-F:RES_COLD | IGNORE_COLD
+F:REDUC_COLD | IGNORE_COLD
 
 N:149:Woe
 G:=:d
