@@ -413,14 +413,14 @@ static cptr k_info_flags2[] =
 	"SUST_DEX",
 	"SUST_CON",
 	"SUST_CHR",
-	"XXX1",
-	"XXX2",
+        "REDUC_FIRE",
+        "REDUC_COLD",
 	"IM_ACID",
 	"IM_ELEC",
 	"IM_FIRE",
 	"IM_COLD",
-	"XXX3",
-	"XXX4",
+        "REDUC_ELEC",
+        "REDUC_ACID",
 	"FREE_ACT",
 	"HOLD_LIFE",
 	"RES_ACID",
